# silo-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-image.yml
src/silo/: __init__.py  config.py  main.py
src/silo/api/: __init__.py  dependencies.py  version.py
src/silo/api/v1/: __init__.py  auth.py  comment.py  document.py  item.py  itemtype.py  pool.py  role.py  room.py  storage_area.py  storagearea.py  storagefurniture.py  storagetype.py  tag.py  user.py  version.py
src/silo/database/: __init__.py
src/silo/database/models/: Base.py  Comment.py  Document.py  Item.py  ItemTag.py  ItemType.py  Pool.py  Role.py  Room.py  Session.py  StorageArea.py  StorageFurniture.py  StorageType.py  Tag.py  TokenRequest.py  User.py  UserRole.py  __init__.py
src/silo/log/: __init__.py  app_logging.py
src/silo/schemas/: AuthData.py  Base.py  BatteryType.py  Comment.py  Document.py  Item.py  ItemSearch.py  ItemType.py  Pool.py  Role.py  Room.py  StorageArea.py  StorageFurniture.py  StorageType.py  Tag.py  Token.py  User.py  Version.py  __init__.py
src/silo/scripts/: migrate.py
src/silo/security/: __init__.py  authenticator_factory.py  jwt.py  ldap.py  token.py
src/silo/security/authenticator/: BaseAuthenticator.py  LDAPAuthenticator.py  __init__.py  exceptions.py
src/silo/startup/: __init__.py  add_default_admin.py  add_default_roles.py  create_tables.py
src/silo/utils/: DocumentManager.py  __init__.py  str_load_class.py  utils.py
