[project]
name = "SILO"
version = "0.0.1"
authors = [
  { name="Marcel-Brian Wilkowsky", email="kontakt@marcelwilkowsky.de" },
]
description = " System for Inventory and Logistics Optimization"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/silo-app/backend"
Issues = "https://github.com/silo-app/backend/issues"